add simple usage examples.